# nullbot

./: .gitignore  LICENSE  README.md  bootstrap.sh  nullbot.py  pyproject.toml  requirements.txt
migrations/: 0001_twitch.down.sql  0001_twitch.up.sql  0002_twitch_ci.down.sql  0002_twitch_ci.up.sql
plugin/: choose.py  twitch.py
