[tool.poetry]
name = "nullbot"
version = "0.1.0"
description = ""
authors = []
license = "BSD-3-Clause"

[tool.poetry.dependencies]
python = "^3.8"
matrix-nio = "^0.9.0"
httpx = "^0.12.1"
asyncpg = "^0.20.1"

[tool.poetry.dev-dependencies]

[tool.poetry.scripts]
nullbot = "nullbot:main"
[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

